--- a/templates/tracker/login.html
+++ b/templates/tracker/login.html
@@ -229,12 +229,17 @@
                             <div class="text-danger small mt-1">{{ form.username.errors }}</div>
                         {% endif %}
                     </div>
-                    <div class="mb-4">
+                    <div class="mb-2">
                         <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
                         {{ form.password }}
                         {% if form.password.errors %}
                             <div class="text-danger small mt-1">{{ form.password.errors }}</div>
                         {% endif %}
+                    </div>
+                    <div class="mb-3 text-end">
+                        <a href="{% url 'password_reset' %}" class="text-primary text-decoration-none small">
+                            <i class="fas fa-key"></i> Forgot password?
+                        </a>
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary w-100" id="loginBtn">
